auth v0.1
